...
        case SavedDestinationType.frequent:
          break;
      }
    }

    if (!hasHome && onAddHome != null) {
      items.add((null, _AddItem(Icons.home, 'Add Home', onAddHome!)));
    }
    if (!hasWork && onAddWork != null) {
      items.add((null, _AddItem(Icons.work, 'Add Work', onAddWork!)));
    }
    if (!hasCampus && onAddCampus != null) {
      items.add((null, _AddItem(Icons.school, 'Add Campus', onAddCampus!)));
...
